Issue #25089: Adds logging to installer for case where launcher is not selected on upgrade.